be/src/catalog/catalog.cc
@@ -35,6 +35,13 @@ DEFINE_bool(load_catalog_in_background, false,
 DEFINE_int32(num_metadata_loading_threads, 16,
     "(Advanced) The number of metadata loading threads (degree of parallelism) to use "
     "when loading catalog metadata.");
+DEFINE_int32(max_hdfs_partitions_parallel_load, 5,
+    "(Advanced) Number of threads used to load block metadata for HDFS based partitioned "
+    "tables. Due to HDFS architectural limitations, it is unlikely to get a linear "
+    "speed up beyond 5 threads.");
+DEFINE_int32(max_nonhdfs_partitions_parallel_load, 20,
+    "(Advanced) Number of threads used to load block metadata for tables that do not "
+    "support the notion of blocks/storage IDs. Currently supported for S3/ADLS.");
 DEFINE_int32(initial_hms_cnxn_timeout_s, 120,
     "Number of seconds catalogd will wait to establish an initial connection to the HMS "
     "before exiting.");
