common/thrift/BackendGflags.thrift
@@ -58,4 +58,8 @@ struct TBackendGflags {
   18: required bool enable_stats_extrapolation
 
   19: required i64 sentry_catalog_polling_frequency_s
+
+  20: required i32 max_hdfs_partitions_parallel_load
+
+  21: required i32 max_nonhdfs_partitions_parallel_load
 }
